objects/PG_Tiering__c.object
<CustomObject>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked means this Tiering Result &amp; Penalty is part of Custom Tiering. Leave unchecked if thisResult &amp; Penalty combination is part of Standard Tiering</inlineHelpText>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Catalog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This lookup should be populated for Standard Tiering records</inlineHelpText>
        <label>PG Catalog Item</label>
        <referenceTo>PG_Catalog_Item__c</referenceTo>
        <relationshipLabel>PG Tiering</relationshipLabel>
        <relationshipName>PG_Tiering</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PG_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This lookup should be populated for Custom Tiering records</inlineHelpText>
        <label>PG Metric</label>
        <referenceTo>PG_Metric__c</referenceTo>
        <relationshipLabel>PG Tiering</relationshipLabel>
        <relationshipName>PG_Tiering</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Penalty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Penalty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>This is used to define the Order of Result &amp; Penalty. Guidance is to have the zero Penalty records with the lowest sequence, and the 100% Penalty records with the highest sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PG Tiering</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PGTIER-{0000}</displayFormat>
        <label>PG Tiering</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PG Tiering</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>